// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should display error message when value is outside of range 1`] = `
<div>
  <EuiRange
    compressed={false}
    fullWidth={false}
    levels={Array []}
    max={10}
    min={0}
    onChange={[Function]}
    showInput={false}
    showLabels={false}
    showRange={false}
    showTicks={false}
    showValue={false}
    step={1}
    value="11"
  />
  <EuiFormErrorText>
    <FormattedMessage
      defaultMessage="Must be between {min} and {max}"
      id="xpack.maps.validatedRange.rangeErrorMessage"
      values={
        Object {
          "max": 10,
          "min": 0,
        }
      }
    />
  </EuiFormErrorText>
</div>
`;

exports[`Should pass slider props to slider 1`] = `
<EuiRange
  compressed={false}
  fullWidth={false}
  levels={Array []}
  max={10}
  min={0}
  onChange={[Function]}
  showInput={true}
  showLabels={true}
  showRange={true}
  showTicks={false}
  showValue={false}
  step={1}
  value="3"
/>
`;

exports[`Should render slider 1`] = `
<EuiRange
  compressed={false}
  fullWidth={false}
  levels={Array []}
  max={10}
  min={0}
  onChange={[Function]}
  showInput={false}
  showLabels={false}
  showRange={false}
  showTicks={false}
  showValue={false}
  step={1}
  value="3"
/>
`;
